css fixes, better readability on small screens

--- a/assets/scss/_components.scss
+++ b/assets/scss/_components.scss
@@ -1,7 +1,3 @@
-// @import 'variables';
-// @import 'support/mixins';
-
-/* Homepage Hero */
 .hero {
     background-color: $primary;
     color: $white;
@@ -181,12 +177,16 @@
             color: $primary;
         }
     }
-
-    
-    
+   
     .grid.three {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
         row-gap: 20px;
+        column-gap: 20px;
         margin: 20px 0px;
+        @include breakpoint(small) {
+            grid-template-columns: 1fr;
+        }
     }
     .bio {
         display: grid;  
@@ -219,25 +219,6 @@
     padding-bottom: 140px;
 }
 
-.experimental {
-    .grid.three .col {
-        padding: 0px;
-    }
-    .icon {
-        background-color: $primary;
-        padding: 25px;
-        min-height: 95px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-    .content {
-        padding: 25px;
-        .example {
-            background-color: $lightgray;
-        }
-    }
-}
 
 .blog {
     padding-bottom: 50px;
@@ -426,146 +407,64 @@
     }
 }
 
-// .docs {
-//     background-color: #fff;
-//     margin-top: -90px;
-//     padding: 30px 30px 50px 30px;
-//     .side-nav {
-//         width: 25%;
-//         float: left;
-//         position: relative;
-//         ul {
-//             padding-left: 0px;
-//             margin-bottom: 35px;
-//             li {
-//                 display: list-item;
-//                 margin-bottom: 15px;
-//                 a {
-//                     color: $gray-500;
-//                     font-size: 14px;
-//                     &.active {
-//                         color: $blue;
-//                     }
-//                 }
-//                 &.heading {
-//                     color: $black;
-//                     font-size: 14px;
-//                 }
-//             }
-//         }
-//         .dropdown {
-//             font-size: 14px;
-//             font-family: $metropolis-medium;
-//             margin-bottom: 10px;
-//             button {
-//                 background-image: url(/img/down-arrow.svg);
-//                 background-repeat: no-repeat;
-//                 background-position: right center;
-//                 display: inline;
-//                 padding: 0px 15px 0 0;
-//                 border: none;
-//                 color: $black;
-//                 font-size: 14px;
-//                 font-family: $metropolis-medium;
-//                 margin-bottom: 10px;
-//                 &:focus {
-//                     outline: none;
-//                 }
-//             }
-//         }
-//         .dropdown-menu {
-//             position: absolute;
-//             border: 1px solid $gray-500;
-//             border-radius: 5px;
-//             top: 30px;
-//             left: 0px;
-//             background-color: $white;
-//             padding: 10px 20px;
-//             min-width: 100px;
-//             display: block;
-//             a {
-//                 display: block;
-//                 margin: 7px 0px;
-//             }
-//             &.dropdown-menu-visible {
-//                 display: block;
-//                 z-index: 1;
-//             }
-//         }
-//         .form-control {
-//             display: block;
-//             width: 100%;
-//             height: 40px;
-//             padding: .375rem .75rem;
-//             font-size: 1.125rem;
-//             line-height: 1.5;
-//             color: $gray-500;
-//             background-color: #fff;
-//             border: 1px solid #cecece;
-//             background-image: url(/img/search-icon.svg);
-//             background-repeat: no-repeat;
-//             background-position: 95% center;
-//             &:focus {
-//                 outline: none;
-//             }
-//             &::-webkit-search-cancel-button {
-//                 -webkit-appearance: none;
-//             }
-//         }
-//         .ds-dataset-1 {
-//             padding: 5px;
-//         }
-//         .ds-dropdown-menu {
-//             background-color: #fff;
-//             border: 1px solid #cecece;
-//         }
-//     }
-//     .docs-content {
-//         width: 75%;
-//         float: right;
-//         a {
-//             font-size: 14px;
-//         }
-//         ul {
-//             list-style-type: disc;
-//             padding-left: 20px;
-//             li {
-//                 list-style-type: unset;
-//                 display: list-item;
-//                 margin-bottom: 10px;
-//                 font-size: 14px;
-//                 color: $gray-500;
-//                 line-height: 1.6em;
-//                 list-style-image: url(/img/arrow.svg);
-//             }
-//         }
-//         ol {
-//             li {
-//                 list-style-type: decimal;
-//                 display: list-item;
-//                 margin-bottom: 10px;
-//                 font-size: 14px;
-//                 color: $gray-500;
-//             }
-//         }
-//         code {
-//             border: 2px solid #EFEFEF;
-//             padding: 2px 8px;
-//         }
-//         pre {
-//             code {
-//                 display: block;
-//                 border: 15px solid #EFEFEF;
-//                 padding: 15px;
-//                 margin-bottom: 30px;
-//                 overflow-x: auto;
-//             }
-//         }
-//         img {
-//             max-width: 100%;
-//         }
-//     }
-// }
+.downloads-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    @include breakpoint(small) {
+        grid-template-columns: 1fr;
+        margin-bottom: 1rem;
+    }
+}
+
+.license-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    @include breakpoint(small) {
+        grid-template-columns: 1fr;
+        margin-bottom: 3rem;
+    }
+}
+
+.homepage-grid {
+    .grid.three {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        row-gap: 20px;
+        column-gap: 20px;
+        @include breakpoint(small) {
+            grid-template-columns: 1fr;
+        }
+    }
+
+.home-grid-cards {
+    padding: 3rem 1rem 3rem;
+
+    @include breakpoint(extra-large) {
+    padding: 2rem 3rem .5rem; 
+    .col:first-of-type {
+        padding-bottom: 50px;
+        }
+    }
+    @include breakpoint(large) {
+        padding: 2rem 3rem .5rem; 
+        .col:first-of-type {
+            padding-bottom: 50px;
+        }
+    }
+
+    @include breakpoint(medium) {
+    padding: 2rem 2rem .5rem; 
+    .col:first-of-type {
+        padding-bottom: 50px;
+        }
+    }
+}
+    .home-grid-cards:hover {
+        // color: $primary !important; 
+        background-color: $gray-100 !important;
+        //border-color: $secondary !important;
+    }
+}
 
 .card-text-p {
     color: $gray-600;
@@ -582,3 +481,4 @@
 .bg-gradient-light {
     background-image: linear-gradient($primary, $primary-light);
 };
+
